[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/dialogue.gd" type="Script" id=1]
[ext_resource path="res://fonts/roboto_regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://fonts/roboto_italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/main.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Dialogue" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Text" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -640.0
margin_top = -200.0
margin_right = 640.0
rect_min_size = Vector2( 1280, 200 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Text goes here[/center]"
text = "Text goes here"
__meta__ = {
"_edit_lock_": true
}

[node name="Control" type="Control" parent="Text"]
margin_top = -520.0
margin_right = 1280.0
margin_bottom = 200.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Choice" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
theme = ExtResource( 4 )
custom_constants/separation = 10
alignment = 1

[node name="Yes" type="Button" parent="Choice"]
margin_top = 325.0
margin_right = 1280.0
margin_bottom = 355.0
text = "Yes"

[node name="No" type="Button" parent="Choice"]
margin_top = 365.0
margin_right = 1280.0
margin_bottom = 395.0
text = "No"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Choice/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="Choice/No" to="." method="_on_No_pressed"]
